[project]
name = "compromeets"
version = "0.1.1"
description = "A Python app for finding where to meet."
packages = [{include = "compromeets"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "googlemaps>=4.10.0",
    "httpx>=0.27.0",
    "pytest>=9.0.1",
    "r5py>=1.0.7",
    "responses>=0.25.8",
    "scikit-learn>=1.6.1",
    "transx2gtfs>=0.4.1",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "folium>=0.20.0",
    "ipykernel>=7.1.0",
    "mapclassify>=2.8.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.8.0",
    "r5py-sampledata-helsinki>=1.0.3.post3",
    "ruff>=0.14.5",
    "seaborn>=0.13.2",
]

[tool.basedpyright]
reportUnusedCallResult = false

[tool.pytest_env]
ENVIRONMENT = "test"

[tool.pytest.ini_options]
markers = [
   "containers: tests that require Docker/Testcontainers",
   "integration: tests that make real API calls or external requests",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv"]

[tool.ruff.lint]
select = [
   "B", # flake8-bugbear
   "C4", # flake8-comprehensions
   "C90", # mccabe (we are not ready)
   "D", # pydocstyle
   "E", # pycodestyle
   "F", # pyflakes
   "FBT", # flake8-boolean-trap
   "I", # isort
   "N", # pep8-naming
   "PIE", # flake8-pie
   "PL", # pylint
   "SIM", # flake8-simplify
   "UP", # pyupgrade
   "YTT", # flake8-2020
]
ignore = [
   #### modules
   "A002",
   "A003",
   "ANN", # flake8-annotations
   "B006", # Do not use mutable data structures for argument defaults
   "COM", # flake8-commas
   "C90", # mccabe complexity
   "DJ", # django
   "EXE", # flake8-executable
   "T10", # debugger
   "TID", # flake8-tidy-imports

   #### specific rules
   "D100", # ignore missing docs
   "D101",
   "D102",
   "D103",
   "D104", # ignore missing docstring in public package
   "D105", # Missing docstring in magic method
   "D106",
   "D107", # Missing docstring in __init__
   "D200",
   "D203", # One blank line before class
   "D205",
   "D212", # Multiline summary second line
   "D400",
   "D401",
   "D415",
   "DTZ001",
   "DTZ005", # ignore timezone warnings
   "E402", # false positives for local imports
   "FBT001",
   "FBT002",
   "FBT003", # Boolean positional value in function call
   "INP001",
   "N803",
   "N806",
   "NPY002",
   "PGH004",
   "PLE1205",
   "PLC0415", # `import` should be at the top-level of a file
   "PLR0913",
   "PTH123",
   "SIM118", # Use `key in dict` instead of `key in dict.keys()` - incorrectly flagging safetensors usage
   "S113",
   "TRY003", # external messages in exceptions are too verbose
   "TD002",
   "TD003",
   "T201",
   "PGH003",
   "FIX002", # too verbose descriptions of todos
   "RUF012",
   "S101", # ignore use of assert in unit tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
   "D401", # First line of docstring should be in imperative mood
   "D404", # First word of the docstring should not be "This"
   "F841", # Local variable is assigned to but never used
   "PLR2004", # Magic values
   "PLR0913", # Too many arguments in function definition
   "PLC0415", # `import` should be at the top-level of a file
   "SIM117", # Use a single `with` statement
]

[tool.bumpversion]
current_version = "0.1.1"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<build>\d+))?'
commit = true
tag = false
serialize = [
	"{major}.{minor}.{patch}.{release}{build}",
	"{major}.{minor}.{patch}",
]
message = "version: {current_version} → {new_version}"
pre_commit_hooks = [
   "uv sync",
   "git add uv.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "compromeets/__init__.py"
